feat: Implement 45/48 audit findings - security, features, docs, tests
Security fixes:
- Fix CORS wildcard to use configured origins
- Add JWT auth to WebSocket endpoints
- Fix shell injection (os.system → subprocess.run)
- Add Supabase env validation, promise error handling
- Add Redis-based rate limiting (3 tiers)
- Add AOP audit logging with admin endpoint

Documentation:
- Rewrite all 14 docs to match actual stack (Spring Boot, LiteLLM, LangGraph)

New features:
- Approval workflow (model, service, controller, frontend API)
- Calendar/meetings (7 REST endpoints, RSVP, date range queries)
- Session recording scaffolding (S3, presigned URLs)
- Email service (Resend REST API, 4 async templates)
- Billing service (Stripe checkout, webhooks, subscriptions)
- Coordinator and Database agents (Python)
- VNC frame capture (RFB protocol)
- PWA support (manifest, service worker)

Improvements:
- Profile update and password change APIs
- Settings page wired to backend mutations
- Analytics connected to real API data
- Console.log cleanup (dev-only logging)
- PID-based daemon status/stop commands
- Config update handler and execution log storage

Tests:
- Backend: 27 unit tests (AuthService, TaskService, AuthController)
- Frontend: Vitest + Testing Library setup, 25 tests (Button, utils, auth-store)

Migrations: V5 (audit_logs), V6 (approvals), V7 (session_recordings),
V8 (subscriptions), V9 (meetings + meeting_attendees)

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>